@@ -4,46 +4,35 @@ import liquibase.configuration.GlobalConfiguration;
 import liquibase.configuration.LiquibaseConfiguration;
 import liquibase.database.Database;
 import liquibase.database.DatabaseFactory;
+import liquibase.database.OfflineConnection;
 import liquibase.exception.LiquibaseParseException;
 import liquibase.parser.SnapshotParser;
 import liquibase.parser.core.ParsedNode;
 import liquibase.resource.ResourceAccessor;
 import liquibase.snapshot.DatabaseSnapshot;
-import liquibase.snapshot.EmptyDatabaseSnapshot;
 import liquibase.snapshot.RestoredDatabaseSnapshot;
 import liquibase.util.StreamUtil;
 import org.yaml.snakeyaml.Yaml;
+import org.yaml.snakeyaml.constructor.SafeConstructor;
 
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.IOException;
-import java.util.List;
 import java.util.Map;
 
 public class YamlSnapshotParser extends YamlParser implements SnapshotParser {
 
     @Override
     public DatabaseSnapshot parse(String path, ResourceAccessor resourceAccessor) throws LiquibaseParseException {
-        Yaml yaml = new Yaml();
+        Yaml yaml = new Yaml(new SafeConstructor());
 
-        try {
+        try (
             InputStream stream = StreamUtil.singleInputStream(path, resourceAccessor);
+        ) {
             if (stream == null) {
                 throw new LiquibaseParseException(path + " does not exist");
             }
-
-            Map parsedYaml;
-            try {
-                parsedYaml = yaml.loadAs(new InputStreamReader(stream, LiquibaseConfiguration.getInstance().getConfiguration(GlobalConfiguration.class).getOutputEncoding()), Map.class);
-            } catch (Exception e) {
-                throw new LiquibaseParseException("Syntax error in " + getSupportedFileExtensions()[0] + ": " + e.getMessage(), e);
-            }
-            finally {
-                try {
-                    stream.close();
-                } catch (IOException ioe) {
-                }
-            }
+    
+            Map parsedYaml = getParsedYamlFromInputStream(yaml, stream);
 
             Map rootList = (Map) parsedYaml.get("snapshot");
             if (rootList == null) {
@@ -52,7 +41,9 @@ public class YamlSnapshotParser extends YamlParser implements SnapshotParser {
 
             String shortName = (String) ((Map) rootList.get("database")).get("shortName");
 
-            Database database = DatabaseFactory.getInstance().getDatabase(shortName).getClass().newInstance();
+            Database database = DatabaseFactory.getInstance().getDatabase(shortName).getClass().getConstructor().newInstance();
+            database.setConnection(new OfflineConnection("offline:" + shortName, null));
+
             DatabaseSnapshot snapshot = new RestoredDatabaseSnapshot(database);
             ParsedNode snapshotNode = new ParsedNode(null, "snapshot");
             snapshotNode.setValue(rootList);
@@ -65,11 +56,25 @@ public class YamlSnapshotParser extends YamlParser implements SnapshotParser {
             snapshot.load(snapshotNode, resourceAccessor);
 
             return snapshot;
-        } catch (Throwable e) {
-            if (e instanceof LiquibaseParseException) {
-                throw (LiquibaseParseException) e;
-            }
+        } catch (LiquibaseParseException e) {
+            throw (LiquibaseParseException) e;
+        }
+        catch (Exception e) {
             throw new LiquibaseParseException(e);
         }
+    }
+    
+    private Map getParsedYamlFromInputStream(Yaml yaml, InputStream stream) throws LiquibaseParseException {
+        Map parsedYaml;
+        try (
+            InputStreamReader inputStreamReader = new InputStreamReader(
+                stream, LiquibaseConfiguration.getInstance().getConfiguration(GlobalConfiguration.class).getOutputEncoding()
+            );
+        ) {
+            parsedYaml = (Map) yaml.load(inputStreamReader);
+        } catch (Exception e) {
+            throw new LiquibaseParseException("Syntax error in " + getSupportedFileExtensions()[0] + ": " + e.getMessage(), e);
+        }
+        return parsedYaml;
     }
 }
